--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@hexlet/code",
   "version": "1.0.0",
   "description": "[![Actions Status](https://github.com/ilya00310/backend-project-46/actions/workflows/hexlet-check.yml/badge.svg)](https://github.com/ilya00310/backend-project-46/actions)",
-  "main": "bin/gendiff.js",
+  "main": "./index.js",
   "type": "module",
   "bin": {
     "gendiff": "bin/gendiff.js"
@@ -18,9 +18,12 @@
     "yaml": "^2.5.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.3",
     "@eslint/create-config": "^1.0.0",
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.6.0",
+    "babel-jest": "^29.7.0",
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.29.1",
