--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -11,7 +11,7 @@ jobs:
 
       - run: npm install
 
-      - run: npm run lint
+      - run: make lint
 
       - name: run test
         run: npm test
