--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "commander": "^12.1.0",
-    "lodash": "^4.17.21",
-    "yaml": "^2.5.0"
+    "js-yaml": "^4.1.0",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
